[gd_scene load_steps=12 format=3 uid="uid://uqj3rsqldggj"]

[ext_resource type="Script" path="res://assets/common/Inventory/Inventory.gd" id="1_wfxau"]
[ext_resource type="Texture2D" uid="uid://bs30r13d3hbgr" path="res://icon.svg" id="2_4ttq8"]
[ext_resource type="StyleBox" uid="uid://d0016ba0acq5f" path="res://assets/common/GUI/styles/GUI_button_stylebox.tres" id="2_uyf0x"]
[ext_resource type="Script" path="res://assets/common/Inventory/Item.gd" id="3_1ofro"]
[ext_resource type="StyleBox" uid="uid://c7sdar01jss0" path="res://assets/common/GUI/styles/GUI_button_hovered_stylebox.tres" id="3_24qic"]
[ext_resource type="Texture2D" uid="uid://11nj4u3jxyyi" path="res://assets/common/Items/CrumpledNote_sprite.png" id="4_fvysd"]
[ext_resource type="Texture2D" uid="uid://dxiedi4ohlroe" path="res://assets/common/GUI/icons/Item_inspect.png" id="4_k0u7x"]
[ext_resource type="StyleBox" uid="uid://c2dlwcowvukyd" path="res://assets/common/GUI/styles/GUI_button_pressed_stylebox.tres" id="4_seedx"]
[ext_resource type="StyleBox" uid="uid://3mvcy3td0pib" path="res://assets/common/GUI/styles/GUI_label_stylebox.tres" id="5_5iajw"]

[sub_resource type="InputEventAction" id="InputEventAction_noa2c"]
action = &"main_gameplay_inventory"

[sub_resource type="Shortcut" id="Shortcut_appoy"]
events = [SubResource("InputEventAction_noa2c")]

[node name="Inventory" type="VBoxContainer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -424.0
offset_right = -9.0
offset_bottom = 459.0
grow_horizontal = 0
script = ExtResource("1_wfxau")
item_description_noselect = &"this is your inventory.\nclick on an item above to learn more."
metadata/_edit_use_anchors_ = true

[node name="InventoryButton" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = ExtResource("2_uyf0x")
theme_override_styles/hover = ExtResource("3_24qic")
theme_override_styles/pressed = ExtResource("4_seedx")
toggle_mode = true
shortcut = SubResource("Shortcut_appoy")
shortcut_feedback = false
text = "Inventory"

[node name="InventoryContainer" type="PanelContainer" parent="."]
layout_mode = 2
theme_override_styles/panel = ExtResource("5_5iajw")

[node name="ScrollContainer" type="ScrollContainer" parent="InventoryContainer"]
clip_contents = false
custom_minimum_size = Vector2(0, 300)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="ItemIconsGrid" type="GridContainer" parent="InventoryContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
columns = 3

[node name="Item0" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("2_uyf0x")
theme_override_styles/hover = ExtResource("3_24qic")
theme_override_styles/pressed = ExtResource("4_seedx")
text = "Item0"
icon = ExtResource("2_4ttq8")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("3_1ofro")
item_name = "Item0"
item_description = "test item 0"
dtl_start_label = ""

[node name="Item1" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("2_uyf0x")
theme_override_styles/hover = ExtResource("3_24qic")
theme_override_styles/pressed = ExtResource("4_seedx")
text = "Item1"
icon = ExtResource("2_4ttq8")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("3_1ofro")
item_name = "Item1"
item_description = "test item 1"
dtl_start_label = ""

[node name="Atrium_CrumpledNote" type="Button" parent="InventoryContainer/ScrollContainer/ItemIconsGrid"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("2_uyf0x")
theme_override_styles/hover = ExtResource("3_24qic")
theme_override_styles/pressed = ExtResource("4_seedx")
text = "Crumpled Note"
icon = ExtResource("4_fvysd")
icon_alignment = 1
vertical_icon_alignment = 0
script = ExtResource("3_1ofro")
item_sprite = ExtResource("4_fvysd")
item_name = "Crumpled Note"
item_description = "A crumpled yellow note you found on the floor of the Atrium."
item_dtl = "res://Timelines/Atrium_CrumpledNote.dtl"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 8
alignment = 2

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("5_5iajw")

[node name="ItemText" type="RichTextLabel" parent="HBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
text = "this is your inventory. 
click on an item above to learn more"

[node name="InspectItemButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = ExtResource("2_uyf0x")
theme_override_styles/hover = ExtResource("3_24qic")
theme_override_styles/pressed = ExtResource("4_seedx")
text = "inspect"
icon = ExtResource("4_k0u7x")
icon_alignment = 1
vertical_icon_alignment = 0

[connection signal="toggled" from="InventoryButton" to="." method="_on_inventory_button_toggled"]
[connection signal="pressed" from="HBoxContainer/InspectItemButton" to="." method="_on_inspect_item_button_pressed"]
